--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "appwrite": "^21.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "rollup": "^4.52.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
