--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "appwrite": "^21.3.0",
+    "dotenv": "^17.2.3",
     "esbuild": "^0.25.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
