--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-immo",
+  "name": "copy-of-my-immo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "appwrite": "^21.3.0",
-    "dotenv": "^17.2.3",
-    "esbuild": "^0.25.11",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^7.9.5",
-    "rollup": "^4.52.5"
+    "vite": "^7.1.12",
+    "@supabase/supabase-js": "2",
+    "@vitejs/plugin-react": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
