--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2",
+    "@vitejs/plugin-react": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^7.9.5",
-    "vite": "^7.1.12",
-    "@supabase/supabase-js": "2",
-    "@vitejs/plugin-react": "^5.1.0"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.4.1"
   }
 }
