--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "2",
+    "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
